# aoc

aoc-input-fetcher/: Cargo.toml
aoc-input-fetcher/src/: lib.rs
aoc_input_fetcher/: Cargo.toml
aoc_input_fetcher/src/: input_fetcher.rs  internal_input_fetcher.rs  lib.rs
aoc_utils/: Cargo.toml
aoc_utils/src/: lib.rs
solutions/: .env  .gitignore  Cargo.toml  populate-year.sh  populate_year.sh  watch-today.sh
solutions/src/: cli_app.rs  day_template.rs  input_fetch_wrapper.rs  macros.rs  main.rs  solution_runner.rs  solver.rs
solutions/src/utils/: add_to_usize.rs  char_utils.rs  direction.rs  get_neighbouring_pos.rs  get_width_height.rs  grid.rs  iterator_index.rs  manhattan.rs  matrix.rs  mod.rs  to_usize_tuple.rs
solutions/src/utils/grid/: cell.rs  mod.rs  neighbours.rs
solutions/src/utils/grid/iterators/: grid_into_neighbours_iterator.rs  mod.rs  neighbours_into_iterator.rs
solutions/src/y2015/: day1.rs  day10.rs  day11.rs  day12.rs  day15.rs  day19.rs  day2.rs  day20.rs  day22.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
solutions/src/y2016/: day1.rs  day10.rs  day12.rs  day13.rs  day14.rs  day16.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
solutions/src/y2017/: day1.rs  day13.rs  day14.rs  day16.rs  day2.rs  day21.rs  day22.rs  day23.rs  day4.rs  day5.rs  day7.rs
solutions/src/y2018/: day1.rs  day10.rs  day13.rs  day18.rs  day19.rs  day2.rs  day21.rs  day24.rs  day25.rs  day3.rs  day6.rs
solutions/src/y2019/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day23.rs  day24.rs  day25.rs  day3.rs  day5.rs  day7.rs  day8.rs  day9.rs  helpers.rs  intcode_computer.rs  mod.rs
solutions/src/y2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
solutions/src/y2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day21.rs  day22.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
solutions/src/y2021/grammars/: day2.pest
solutions/src/y2022/: day1.rs  day10.rs  day14.rs  day17.rs  day2.rs  day21.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
solutions/src/y2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
solutions/src/y2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day2.rs  day20.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
