[package]
name = "aoc_input_fetcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44", default-features = false }
attohttpc = { version = "0.17.0", features = ["rustls"], default-features = false }
dotenv = { version = "0.15.0", default-features = false }

[dev-dependencies]
hyper = { version = "0.14.13", default-features = false }
tokio = { version = "1.12.0", features = ["macros"], default-features = false }
warp = { version = "0.3.1", default-features = false }
