[package]
name = "solutions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.44", default-features = false }
aoc_input_fetcher = { path = "../aoc_input_fetcher", version = "0.1.0" }
chrono = { version = "0.4.19" }
colored = "2.0.0"
itertools = "0.10.1"
lazy_static = { version = "1.4.0", default-features = false }
log = "0.4.14"
num = "0.4.0"
paste = "1.0.6"
regex = "1.5.4"
seq-macro = "0.2.2"
structopt = { version = "0.3.25", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
