[package]
name = "solutions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
aoc_input_fetcher = { path = "../aoc_input_fetcher", version = "0.1.0" }
cached = "0.46.1"
chrono = { version = "0.4.19" }
colored = "2.0.0"
easy-cast = "0.5.2"
grid = "0.15.0"
hex = "0.4.3"
itertools = "0.10.1"
lazy_static = { version = "1.4.0", default-features = false }
log = "0.4.14"
matrix = "0.22.0"
md5 = "0.7.0"
num = "0.4.0"
paste = "1.0.6"
pathfinding = "3.0.13"
pest = "2.1.3"
pest_consume = "1.1.1"
pest_derive = "2.1.0"
petgraph = "0.6.5"
rayon = "1.8.0"
regex = "1.5.4"
seq-macro = "0.2.2"
sscanf = "0.4.1"
structopt = { version = "0.3.25", default-features = false }
thiserror = { version = "1.0.30", default-features = false }
tuple = "0.5.2"
